# RR

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml
docs/.vitepress/: config.mts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser.rs  pipeline.rs
src/: error.rs  main.rs  utils.rs
src/codegen/: mir_emit.rs
src/hir/: def.rs  desugar.rs  lower.rs  mod.rs
src/mir/: def.rs  flow.rs  lower_hir.rs  mod.rs  opt.rs  semantics.rs  structurizer.rs  verify.rs
src/mir/analyze/: alias.rs  effects.rs  escape.rs  mod.rs  na.rs  range.rs
src/mir/opt/: bce.rs  de_ssa.rs  fresh_alloc.rs  gvn.rs  inline.rs  intrinsics.rs  licm.rs  loop_analysis.rs  loop_opt.rs  parallel_copy.rs  sccp.rs  simplify.rs  tco.rs  v_opt.rs
src/runtime/: runner.rs
src/syntax/: ast.rs  lex.rs  mod.rs  parse.rs  token.rs
tests/: bce_shifted_index.rs  benchmark_vectorization.rs  commercial_determinism.rs  commercial_negative_corpus.rs  comprehensive_all.rs  fuzz_regression_no_panic_invalid_mir.rs  golden.rs  hybrid_fallback.rs  lambda_closure.rs  lowering_pipe_try_match.rs  mir_lowering_loop_match.rs  multi_errors.rs  o0_codegen_smoke.rs  parse_multi_errors.rs  perf_regression_gate.rs  runtime_static_errors.rs  semantic_errors.rs  semicolon_required.rs  vectorization_extended.rs
