[package]
name = "rr-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rustc-hash = "2"

[dependencies.RR]
path = ".."

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pipeline"
path = "fuzz_targets/pipeline.rs"
test = false
doc = false
bench = false
